fixed some spacing

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    margin-left: 20px;
 }
 
 nav ul li {
